--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "MIT",
   "engines": {
-    "node": "16.x"
+    "node": "14.x"
   },
   "scripts": {
     "prebuild": "rimraf dist",
@@ -30,10 +30,13 @@
     "@nestjs/graphql": "^10.1.6",
     "@nestjs/platform-express": "^8.0.0",
     "apollo-server-express": "^3.11.1",
+    "cache-manager": "^5.1.3",
+    "cache-manager-redis-store": "^3.0.1",
     "compression": "^1.7.4",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "helmet": "^5.1.1",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -57,6 +60,7 @@
     "supertest": "^6.1.3",
     "ts-jest": "28.0.1",
     "ts-loader": "^9.2.3",
+    "ts-morph": "^17.0.1",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
     "typescript": "^4.3.5"
