--- a/package.json
+++ b/package.json
@@ -21,7 +21,17 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migrate:dev": "prisma migrate dev --preview-feature",
+    "migrate:dev:create": "prisma migrate dev --create-only --preview-feature",
+    "migrate:reset": "prisma migrate reset --preview-feature",
+    "migrate:deploy": "npx prisma migrate deploy --preview-feature",
+    "migrate:status": "npx prisma migrate status --preview-feature",
+    "migrate:resolve": "npx prisma migrate resolve --preview-feature",
+    "prisma:studio": "npx prisma studio",
+    "prisma:generate": "npx prisma generate",
+    "prisma:generate:watch": "npx prisma generate --watch",
+    "postinstall": "npm run prisma:generate"
   },
   "dependencies": {
     "@nestjs/apollo": "^10.1.6",
@@ -29,6 +39,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.1.6",
     "@nestjs/platform-express": "^8.0.0",
+    "@prisma/client": "^4.7.1",
     "apollo-server-express": "^3.11.1",
     "cache-manager": "^5.1.3",
     "cache-manager-redis-store": "^3.0.1",
@@ -36,6 +47,7 @@
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "helmet": "^5.1.1",
+    "nestjs-prisma": "^0.19.0",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -56,6 +68,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.0.3",
     "prettier": "^2.3.2",
+    "prisma": "^4.7.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.1",
