--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postinstall": "npm run prisma:generate"
   },
   "dependencies": {
+    "@balancer-labs/sdk": "^0.1.38",
     "@nestjs/apollo": "^10.1.6",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
@@ -45,8 +46,10 @@
     "cache-manager-redis-store": "^3.0.1",
     "compression": "^1.7.4",
     "dotenv": "^16.0.3",
+    "ethers": "^5.7.2",
     "graphql": "^16.6.0",
     "helmet": "^5.1.1",
+    "lodash": "^4.17.21",
     "nestjs-prisma": "^0.19.0",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
