--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "prisma:studio": "npx prisma studio",
     "prisma:generate": "npx prisma generate",
     "prisma:generate:watch": "npx prisma generate --watch",
-    "postinstall": "npm run prisma:generate"
+    "postinstall": "npm run prisma:generate",
+    "gen:types": "ts-node ./generate-typings.ts",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@balancer-labs/sdk": "^0.1.38",
@@ -42,6 +44,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^4.7.1",
     "apollo-server-express": "^3.11.1",
+    "bignumber.js": "^9.1.0",
     "cache-manager": "^5.1.3",
     "cache-manager-redis-store": "^3.0.1",
     "compression": "^1.7.4",
@@ -57,6 +60,16 @@
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
+    "@graphql-codegen/add": "^3.1.0",
+    "@graphql-codegen/cli": "^2.3.0",
+    "@graphql-codegen/introspection": "^2.1.0",
+    "@graphql-codegen/schema-ast": "^2.4.0",
+    "@graphql-codegen/typescript": "2.4.0",
+    "@graphql-codegen/typescript-document-nodes": "^2.2.0",
+    "@graphql-codegen/typescript-graphql-request": "^4.3.0",
+    "@graphql-codegen/typescript-operations": "^2.2.0",
+    "@graphql-codegen/typescript-resolvers": "2.4.1",
+    "@graphql-tools/schema": "^8.3.1",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
