--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "prisma:generate:watch": "npx prisma generate --watch",
     "postinstall": "npm run prisma:generate",
     "gen:types": "ts-node ./generate-typings.ts",
-    "codegen": "graphql-codegen --config codegen.yml"
+    "codegen": "graphql-codegen --config codegen.yml -r dotenv/config"
   },
   "dependencies": {
     "@balancer-labs/sdk": "^0.1.38",
@@ -52,6 +52,7 @@
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0",
     "helmet": "^5.1.1",
     "lodash": "^4.17.21",
     "nestjs-prisma": "^0.19.0",
