--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "graphql-request": "^5.0.0",
     "helmet": "^5.1.1",
     "lodash": "^4.17.21",
+    "moment-timezone": "^0.5.39",
     "nestjs-prisma": "^0.19.0",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
