--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^4.7.1",
     "apollo-server-express": "^3.11.1",
+    "axios": "^0.24.0",
     "bignumber.js": "^9.1.0",
     "cache-manager": "^5.1.3",
     "cache-manager-redis-store": "^3.0.1",
@@ -56,6 +57,7 @@
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "helmet": "^5.1.1",
+    "limiter": "^2.1.0",
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.39",
     "nestjs-prisma": "^0.19.0",
