--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "compression": "^1.7.4",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
+    "fs-extra": "^11.1.0",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "helmet": "^5.1.1",
@@ -81,6 +82,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
