--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.39",
     "nestjs-prisma": "^0.19.0",
+    "node-cron": "^3.0.2",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
