--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "codegen": "graphql-codegen --config codegen.yml -r dotenv/config"
   },
   "dependencies": {
-    "@balancer-labs/sdk": "^0.1.38",
+    "@balancer-labs/sdk": "^0.1.40",
     "@ethersproject/bignumber": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
     "@graphql-tools/schema": "^8.3.1",
@@ -95,6 +95,8 @@
     "jest": "28.0.3",
     "prettier": "^2.3.2",
     "prisma": "^4.7.1",
+    "rollup": "^2.79.1",
+    "rollup-plugin-dts": "^3.0.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.1",
