--- a/codegen.yml
+++ b/codegen.yml
@@ -15,3 +15,15 @@ generates:
         BigInt: string
         Bytes: string
         BigDecimal: string
+  src/modules/subgraphs/balancer/generated/gauge-subgraph-types.ts:
+    schema: ${GAUGES_SUBGRAPH}
+    documents: 'src/modules/subgraphs/gauge-subgraph/gauge-subgraph-queries.graphql'
+    plugins:
+      - typescript
+      - typescript-operations
+      - typescript-graphql-request
+    config:
+      scalars:
+        BigInt: string
+        Bytes: string
+        BigDecimal: string
