--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "bignumber.js": "^9.1.0",
     "cache-manager": "^4.1.0",
     "compression": "^1.7.4",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "fs-extra": "^11.1.0",
