--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "moment-timezone": "^0.5.39",
     "nestjs-prisma": "^0.19.0",
     "node-cron": "^3.0.2",
+    "node-schedule": "^2.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -85,6 +86,7 @@
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
+    "@types/node-schedule": "^2.1.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
