--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "migrate:dev": "prisma migrate dev --preview-feature",
     "migrate:dev:create": "prisma migrate dev --create-only --preview-feature",
-    "migrate:reset": "prisma migrate reset --preview-feature",
+    "migrate:reset": "npx prisma migrate reset --preview-feature",
     "migrate:deploy": "npx prisma migrate deploy --preview-feature",
     "migrate:status": "npx prisma migrate status --preview-feature",
     "migrate:resolve": "npx prisma migrate resolve --preview-feature",
