--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "27.5.0",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^16.0.0",
     "@types/node-schedule": "^2.1.0",
     "@types/supertest": "^2.0.11",
