adding token dynamic data handlers. updated scheduled jobs

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migrate:dev": "prisma migrate dev --preview-feature",
+    "migrate:dev": "prisma migrate dev",
     "migrate:dev:create": "prisma migrate dev --create-only --preview-feature",
     "migrate:reset": "npx prisma migrate reset --preview-feature",
     "migrate:deploy": "npx prisma migrate deploy --preview-feature",
