--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "node": "14.x"
   },
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "prebuild": "npx rimraf dist",
+    "build": "npx nest build",
+    "format": "npx prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "npx nest start",
+    "start:dev": "npx nest start --watch",
+    "start:debug": "npx nest start --debug --watch",
     "start:prod": "node ./dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -22,8 +22,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migrate:dev": "prisma migrate dev",
-    "migrate:dev:create": "prisma migrate dev --create-only --preview-feature",
+    "migrate:dev": "npx prisma migrate dev",
+    "migrate:dev:create": "npx prisma migrate dev --create-only --preview-feature",
     "migrate:reset": "npx prisma migrate reset --preview-feature",
     "migrate:deploy": "npx prisma migrate deploy --preview-feature",
     "migrate:status": "npx prisma migrate status --preview-feature",
@@ -31,8 +31,8 @@
     "prisma:studio": "npx prisma studio",
     "prisma:generate": "npx prisma generate",
     "prisma:generate:watch": "npx prisma generate --watch",
-    "gen:types": "ts-node ./generate-typings.ts",
-    "codegen": "graphql-codegen --config codegen.yml -r dotenv/config"
+    "gen:types": "npx ts-node ./generate-typings.ts",
+    "codegen": "npx graphql-codegen --config codegen.yml -r dotenv/config"
   },
   "dependencies": {
     "@balancer-labs/sdk": "^0.1.40",
