--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "prebuild": "npx rimraf dist",
-    "build": "npx nest build",
+    "build": "npm run prisma:generate && npx nest build",
     "format": "npx prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "npx nest start",
     "start:dev": "npx nest start --watch",
