--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "axios": "^0.24.0",
     "bignumber.js": "^9.1.0",
     "cache-manager": "^4.1.0",
+    "chalk": "^4.1.2",
     "compression": "^1.7.4",
     "date-fns": "^2.29.3",
     "decimal.js": "^10.4.3",
