debugging router flow

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "fs-extra": "^11.1.0",
+    "graphology": "^0.25.1",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "helmet": "^5.1.1",
@@ -96,6 +97,7 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "graphology-types": "^0.24.7",
     "jest": "28.0.3",
     "prettier": "^2.3.2",
     "prisma": "^4.7.1",
